Cambios en html

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
             <div class="col-3"></div>
             <div class="col-6">
                 <p><b>Módulo 2 • Github</b> del Diplomado en REACT JS del <b>CAMPUS FIMLM</b>, el cual está conformado por los siguientes estudiantes:</p>
+                <p>Link GitHub</p>
             </div>
             <div class="col-3"></div>
           </div>
@@ -50,6 +51,7 @@
                     <div class="card-body">
                         <h5 class="card-title text-center">Jorge Gaitán</h5>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <p>Link GitHub</p>
                     </div>
                   </div>
             </div>
@@ -59,6 +61,7 @@
                     <div class="card-body">
                         <h5 class="card-title text-center">Sebastián Vargas</h5>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <p>Link GitHub</p>
                     </div>
                   </div>
             </div>
@@ -68,6 +71,8 @@
                 <div class="card-body">
                     <h5 class="card-title text-center">Fabián Restrepo</h5>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <p>Link GitHub</p>
+
                     </div>
                   </div>
             </div>
@@ -80,6 +85,8 @@
                     <div class="card-body">
                         <h5 class="card-title text-center">Leonardo Ramírez</h5>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <p>Link GitHub</p>
+
                     </div>
                   </div>
             </div>
@@ -89,6 +96,7 @@
                     <div class="card-body">
                         <h5 class="card-title text-center">Alexander Marín</h5>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <p>Link GitHub</p>
                     </div>
                   </div>
             </div>
